# train-reservation-system

./: Cargo.toml  Dioxus.toml  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
.cargo/: config.toml
assets/: map.js  styles.css  tailwind.css
assets/styling/: main.css
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: compartment.rs  mod.rs  navbar.rs  wagon.rs
src/management/: compartment.rs  mod.rs
src/views/: home.rs  mod.rs  train.rs
